--- a/stylua.toml
+++ b/stylua.toml
@@ -2,4 +2,4 @@ column_width = 80
 indent_type = "Spaces"
 indent_width = 2
 line_endings = "Unix"
-quote_style = "AutoPreferDouble"
+quote_style = "AutoPreferSingle"
